<resources>
    <string name="app_name">Send Email Animation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_card_contents">Lorem ipsum dolar Lorem ipsum dolar Lorem ipsum dolar Lorem ipsum dolar Lorem ipsum dolar Lorem ipsum dolar Lorem ipsum dolar Lorem ipsum dolar Lorem ipsum dolar</string>
    <string name="to_field">Phone Number:</string>
    <string name="msg_box">Message</string>
    <string name="send">SEND</string>
    <string name="email_to_field">Email To:</string>
    <string name="subject">Subject</string>
    <string name="show_dialog">SHOW DIALOG</string>
    <string name="support_email">support@cooltechworks.com</string>
    <string name="still_doubts">Still more doubts?</string>
    <string name="contact_support">Contact Support</string>

    <color name="text_card">#c8c9c9</color>
</resources>
